#19 add training links

--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -99,58 +99,18 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <div class="row">
-                                <div class="col-lg-8">
-                                    <p>
-                                        Our next trainings will be about F# programming language and its benefits. 
-                                        What do you gain by using the F# language? How can you make switch?
-                                        We will answer all these question in our training. Join us at 15th of January!
-                                    </p>
-                                </div>
-                                <div class="col-lg-4">
-                                    <ul class="icon-list icon-circle">
-                                        <li>Functional Programming</li>
-                                        <li>F# Development</li>
-                                        <li>Business Model</li>
-                                    </ul>
+                                <div class="col-lg-12">
+                                  <p>
+                                    Learning a new paradigm makes you a better programmer even if you don't switch to using F# full-time.
+                                    The interactive scripting and succint syntax gives you a great tool for quickly solving one-off problems.
+                                    By learning to write idiomatic code in F# you will be able to create maintainable and reusable contributions.
+                                  </p>
+                                  <hr class="space-xs" />
                                 </div>
                             </div>
-                            <hr class="space space-40" />
-                            <table class="table table-grid table-border no-padding-y align-left table-full-sm">
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <div class="icon-box icon-box-left">
-                                                <i class="fas fa-user-tie text-md"></i>
-                                                <div class="caption">
-                                                    <h3 class="text-sm">Expert</h3>
-                                                    <p>John Smith</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="icon-box icon-box-left">
-                                                <i class="fas fa-calendar-alt text-md"></i>
-                                                <div class="caption">
-                                                    <h3 class="text-sm">Date</h3>
-                                                    <p>15 January</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="icon-box icon-box-left">
-                                                <i class="fas fa-users text-md"></i>
-                                                <div class="caption">
-                                                    <h3 class="text-sm">Group</h3>
-                                                    <p>10-15 people</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
                         </div>
                         <div class="col-lg-3">
-                            <a href="#" class="btn btn-sm full-width btn-circle">Register</a>
+                            <a href="https://intellifactory.com/course/2-days-to-fsharp" class="btn btn-sm full-width btn-circle">Learn more</a>
                             <hr class="space-xs" />
                         </div>
                     </div>
@@ -159,57 +119,36 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <div class="row">
-                                <div class="col-lg-8">
-                                    <p>
-                                        This training will be about our 3 major products: WebSharper, Bolero and SiteFi. 
-                                        We will show the development process with our products and answer any questions you might have.
-                                    </p>
-                                </div>
-                                <div class="col-lg-4">
-                                    <ul class="icon-list icon-circle">
-                                        <li>WebSharper</li>
-                                        <li>Bolero</li>
-                                        <li>SiteFi</li>
-                                    </ul>
+                                <div class="col-lg-12">
+                                  <p>
+                                    Web application development is a complex process involving the communication of multiple layers.
+                                    Learn how to use WebSharper to its fullest effect to minimize both routine tasks and potential errors.
+                                  </p>
+                                  <hr class="space-xs" />
                                 </div>
                             </div>
-                            <hr class="space space-40" />
-                            <table class="table table-grid table-border no-padding-y align-left table-full-sm">
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <div class="icon-box icon-box-left">
-                                                <i class="fas fa-user-tie text-md"></i>
-                                                <div class="caption">
-                                                    <h3 class="text-sm">Expert</h3>
-                                                    <p>Richard Dawson</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="icon-box icon-box-left">
-                                                <i class="fas fa-calendar-alt text-md"></i>
-                                                <div class="caption">
-                                                    <h3 class="text-sm">Date</h3>
-                                                    <p>12 February</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div class="icon-box icon-box-left">
-                                                <i class="fas fa-users text-md"></i>
-                                                <div class="caption">
-                                                    <h3 class="text-sm">Graduation</h3>
-                                                    <p>10 people</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
                         </div>
                         <div class="col-lg-3">
-                            <a href="#" class="btn btn-sm btn-circle full-width">Register</a>
+                            <a href="https://intellifactory.com/course/web-and-mobile" class="btn btn-sm btn-circle full-width">Learn more</a>
+                            <hr class="space-xs" />
+                        </div>
+                    </div>
+                    <hr />
+                    <hr class="space-sm" />
+                    <div class="row">
+                        <div class="col-lg-9">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                  <p>
+                                    Learn to provide better user experience with responsive layout, contextual tooltips, action previews, non-blocking computations.
+                                    Make your application look as great as it behaves with animated state transitions.
+                                  </p>
+                                  <hr class="space-xs" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <a href="https://intellifactory.com/course/functional-reactive" class="btn btn-sm btn-circle full-width">Learn more</a>
                             <hr class="space-xs" />
                         </div>
                     </div>
