#19 - Courses are scraped from trainings folder

--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <a href="https://intellifactory.com/course/2-days-to-fsharp" class="btn btn-sm full-width btn-circle">Learn more</a>
+                            <a href="/course/2-days-to-fsharp" class="btn btn-sm full-width btn-circle">Learn more</a>
                             <hr class="space-xs" />
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <a href="https://intellifactory.com/course/web-and-mobile" class="btn btn-sm btn-circle full-width">Learn more</a>
+                            <a href="/course/web-and-mobile" class="btn btn-sm btn-circle full-width">Learn more</a>
                             <hr class="space-xs" />
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <a href="https://intellifactory.com/course/functional-reactive" class="btn btn-sm btn-circle full-width">Learn more</a>
+                            <a href="/course/functional-reactive" class="btn btn-sm btn-circle full-width">Learn more</a>
                             <hr class="space-xs" />
                         </div>
                     </div>
