#19 Change relative to absolute links

--- a/src/Hosted/trainings/functional-reactive.html
+++ b/src/Hosted/trainings/functional-reactive.html
@@ -11,20 +11,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <script src="themekit/scripts/jquery.min.js"></script>
-    <script src="themekit/scripts/main.js"></script>
-    <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="themekit/css/style.min.css" />
-    <link rel="stylesheet" href="themekit/css/magnific-popup.min.css" />
-    <link rel="stylesheet" href="themekit/css/contact-form.min.css" />
-    <link rel="stylesheet" href="themekit/css/content-box.min.css" />
+    <script src="/themekit/scripts/jquery.min.js"></script>
+    <script src="/themekit/scripts/main.js"></script>
+    <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="/themekit/css/style.min.css" />
+    <link rel="stylesheet" href="/themekit/css/magnific-popup.min.css" />
+    <link rel="stylesheet" href="/themekit/css/contact-form.min.css" />
+    <link rel="stylesheet" href="/themekit/css/content-box.min.css" />
     <link
       rel="stylesheet"
-      href="themekit/media/icons/iconsmind/line-icons.min.css"
+      href="/themekit/media/icons/iconsmind/line-icons.min.css"
     />
-    <link rel="stylesheet" href="assets/skin.min.css" />
-    <link rel="stylesheet" href="assets/custom.min.css" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/assets/skin.min.css" />
+    <link rel="stylesheet" href="/assets/custom.min.css" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <script ws-replace="Head"></script>
   </head>
   <body>
@@ -54,7 +54,7 @@
             <div class="col-lg-6">
               <img
                 style="display: block; margin: 0 auto"
-                src="assets/fsharp-training-1.jpg"
+                src="/assets/fsharp-training-1.jpg"
               />
             </div>
           </div>
@@ -66,7 +66,7 @@
             <div class="col-lg-6">
               <img
                 class="margin-23 margin-md-23"
-                src="assets/003.jpg"
+                src="/assets/003.jpg"
               />
             </div>
             <div class="col-lg-6">
@@ -91,7 +91,7 @@
             <div class="col-lg-6">
               <img
                 class="margin-23 margin-md-23"
-                src="assets/003.jpg"
+                src="/assets/003.jpg"
               />
             </div>
           </div>
@@ -107,15 +107,15 @@
         rel="stylesheet"
         href="/themekit/media/icons/fontawesome/icons.css"
       />
-      <script src="themekit/scripts/contact-form/contact-form.js"></script>
-      <script src="themekit/scripts/tab-accordion.js"></script>
-      <script src="themekit/scripts/maps.min.js"></script>
-      <script src="themekit/scripts/contact-form/contact-form.js"></script>
-      <script src="themekit/scripts/progress.js"></script>
-      <script src="themekit/scripts/glide.min.js"></script>
-      <script src="themekit/scripts/magnific-popup.min.js"></script>
-      <script src="themekit/scripts/imagesloaded.min.js"></script>
-      <script src="themekit/scripts/parallax.min.js"></script>
+      <script src="/themekit/scripts/contact-form/contact-form.js"></script>
+      <script src="/themekit/scripts/tab-accordion.js"></script>
+      <script src="/themekit/scripts/maps.min.js"></script>
+      <script src="/themekit/scripts/contact-form/contact-form.js"></script>
+      <script src="/themekit/scripts/progress.js"></script>
+      <script src="/themekit/scripts/glide.min.js"></script>
+      <script src="/themekit/scripts/magnific-popup.min.js"></script>
+      <script src="/themekit/scripts/imagesloaded.min.js"></script>
+      <script src="/themekit/scripts/parallax.min.js"></script>
       <script src="media/custom.js"></script>
       <script src="/js/Client${ReleaseMin}.js"></script>
     </footer>
