Implemented jobs folder structure for new open positions in the future

--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -226,7 +226,9 @@
               </table>
             </div>
             <div class="col-lg-3">
-              <a href="/openPosition" class="btn btn-sm full-width btn-circle"
+              <a
+                href="/jobs/202102-fsharp-web-developer"
+                class="btn btn-sm full-width btn-circle"
                 >Learn more</a
               >
               <hr class="space-xs" />
@@ -292,7 +294,9 @@
               </table>
             </div>
             <div class="col-lg-3">
-              <a href="/internPosition" class="btn btn-sm btn-circle full-width"
+              <a
+                href="/jobs/202102-fsharp-intern"
+                class="btn btn-sm btn-circle full-width"
                 >Learn more</a
               >
               <hr class="space-xs" />
