--- a/src/Hosted/jobs/202102-fsharp-web-developer.html
+++ b/src/Hosted/jobs/202102-fsharp-web-developer.html
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>F# Intern</title>
+    <title>F# Web Developer</title>
     <meta name="description" content="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <script src="themekit/scripts/jquery.min.js"></script>
-    <script src="themekit/scripts/main.js"></script>
-    <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="themekit/css/style.min.css" />
-    <link rel="stylesheet" href="themekit/css/magnific-popup.min.css" />
-    <link rel="stylesheet" href="themekit/css/contact-form.min.css" />
-    <link rel="stylesheet" href="themekit/css/content-box.min.css" />
+    <script src="/themekit/scripts/jquery.min.js"></script>
+    <script src="/themekit/scripts/main.js"></script>
+    <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="/themekit/css/style.min.css" />
+    <link rel="stylesheet" href="/themekit/css/magnific-popup.min.css" />
+    <link rel="stylesheet" href="/themekit/css/contact-form.min.css" />
+    <link rel="stylesheet" href="/themekit/css/content-box.min.css" />
     <link
       rel="stylesheet"
-      href="themekit/media/icons/iconsmind/line-icons.min.css"
+      href="/themekit/media/icons/iconsmind/line-icons.min.css"
     />
-    <link rel="stylesheet" href="assets/skin.min.css" />
-    <link rel="stylesheet" href="assets/custom.min.css" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/assets/skin.min.css" />
+    <link rel="stylesheet" href="/assets/custom.min.css" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <script ws-replace="Head"></script>
   </head>
   <body>
@@ -42,18 +42,18 @@
           <div class="row">
             <div class="col-lg-6">
               <hr class="space-xs" />
-              <h1 style="margin-top: 0">F# Intern</h1>
+              <h1 style="margin-top: 0">F# Web Developer</h1>
               <p>What you get:</p>
               <ul>
-                <li>First-hand developer experience</li>
-                <li>Team work</li>
-                <li>Programming knowledge</li>
+                <li>Different technologies and challenges</li>
+                <li>Balanced work and life</li>
+                <li>Growth professionally and personally</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <img
                 style="display: block; margin: 0 auto"
-                src="assets/intern-position-1.jpg"
+                src="/assets/open-position-1.jpg"
               />
             </div>
           </div>
@@ -63,19 +63,19 @@
               <div class="row">
                 <div class="col-lg-8">
                   <p>
-                    We are looking for a motivated F# intern to join our team
-                    and work alongside with our developers on our latest
-                    products. As an intern, you will participate creating new
-                    products and also help with existing product maintenance.
-                    You will attend brainstorm sessions for future product ideas
-                    as well.
+                    We are looking for a motivated F# web developer to help us
+                    grow our business through a strong product strategy and
+                    expanded online presence. You will be responsible for
+                    helping us build our products for leading a variety of
+                    digital initiatives. Creativity, initiative and a proactive
+                    work ethic are highly valued!
                   </p>
                 </div>
                 <div class="col-lg-4">
                   <ul class="icon-list icon-circle">
-                    <li>Programming knowledge</li>
-                    <li>F# knowledge</li>
-                    <li>Experience in .NET framework</li>
+                    <li>Knowledge of F# development</li>
+                    <li>Team communication</li>
+                    <li>Experience in functinal programming</li>
                   </ul>
                 </div>
               </div>
@@ -99,7 +99,7 @@
                         <i class="fas fa-calendar-alt text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Experience</h3>
-                          <p>Not required</p>
+                          <p>Min 2 years</p>
                         </div>
                       </div>
                     </td>
@@ -108,7 +108,7 @@
                         <i class="fas fa-user-graduate text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Graduation</h3>
-                          <p>Not required</p>
+                          <p>Required</p>
                         </div>
                       </div>
                     </td>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-lg-3">
               <a
-                href="mailto:hr@intellifactory.com?subject=F# Intern"
+                href="mailto:hr@intellifactory.com?subject=F# Web Developer"
                 target="_blank"
                 class="btn btn-sm btn-circle full-width"
                 >Send your resume</a
@@ -138,16 +138,16 @@
         rel="stylesheet"
         href="/themekit/media/icons/fontawesome/icons.css"
       />
-      <script src="themekit/scripts/contact-form/contact-form.js"></script>
-      <script src="themekit/scripts/tab-accordion.js"></script>
-      <script src="themekit/scripts/maps.min.js"></script>
-      <script src="themekit/scripts/contact-form/contact-form.js"></script>
-      <script src="themekit/scripts/progress.js"></script>
-      <script src="themekit/scripts/glide.min.js"></script>
-      <script src="themekit/scripts/magnific-popup.min.js"></script>
-      <script src="themekit/scripts/imagesloaded.min.js"></script>
-      <script src="themekit/scripts/parallax.min.js"></script>
-      <script src="media/custom.js"></script>
+      <script src="/themekit/scripts/contact-form/contact-form.js"></script>
+      <script src="/themekit/scripts/tab-accordion.js"></script>
+      <script src="/themekit/scripts/maps.min.js"></script>
+      <script src="/themekit/scripts/contact-form/contact-form.js"></script>
+      <script src="/themekit/scripts/progress.js"></script>
+      <script src="/themekit/scripts/glide.min.js"></script>
+      <script src="/themekit/scripts/magnific-popup.min.js"></script>
+      <script src="/themekit/scripts/imagesloaded.min.js"></script>
+      <script src="/themekit/scripts/parallax.min.js"></script>
+      <script src="/media/custom.js"></script>
       <script src="/js/Client${ReleaseMin}.js"></script>
     </footer>
     <script ws-replace="scripts"></script>
