#19 - Tutorialing instead of courses.

--- a/src/Hosted/course-base.html
+++ b/src/Hosted/course-base.html
@@ -36,67 +36,8 @@
     >
       <div ws-replace="MenuBar"></div>
     </nav>
+    <div ws-replace="VideoList"></div>
     <main>
-      <section class="section-base">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <h1 style="margin-top: 0">Reactive programming</h1>
-              <p>Functional reactive programming is an alternative to event-based approach for creating interactive applications.</p>
-              <br/>
-              <p>With events, you have think about what the full effect of every user action possible would be.</p>
-              <br/>
-              <p>With reactive programming, you can think about how parts of the application react to changes in other parts, including changes initiated by the user.</p>
-              <br/>
-              <p>This leads to a more manageable application logic, enabling better user experience in the same or less development time.</p>
-              <br/>
-            </div>
-            <div class="col-lg-6">
-              <img
-                style="display: block; margin: 0 auto"
-                src="/assets/fsharp-training-1.jpg"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-base section-color">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <img
-                class="margin-23 margin-md-23"
-                src="/assets/003.jpg"
-              />
-            </div>
-            <div class="col-lg-6">
-              <h1 style="margin-top: 0">The basics of reactive programming</h1>
-              <p>Learn about the different approaches and libraries to find the most suited to your needs</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-base">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <h1 style="margin-top: 0">UI.Next</h1>
-              <ul>
-                <li>Data-driven reactivity</li>
-                <li>Reactive collections</li>
-                <li>Create your templates in markup</li>
-                <li>Animations</li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <img
-                class="margin-23 margin-md-23"
-                src="/assets/003.jpg"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
     <i class="scroll-top-btn scroll-top show"></i>
     <footer class="footer light">
@@ -116,10 +57,9 @@
       <script src="/themekit/scripts/magnific-popup.min.js"></script>
       <script src="/themekit/scripts/imagesloaded.min.js"></script>
       <script src="/themekit/scripts/parallax.min.js"></script>
-      <script src="media/custom.js"></script>
+      <script src="/media/custom.js"></script>
       <script src="/js/Client${ReleaseMin}.js"></script>
     </footer>
     <script ws-replace="scripts"></script>
   </body>
 </html>
-
