--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -73,7 +73,7 @@
                                 <h2>Closed groups.</h2>
                                 <span class="extra-field">Private</span>
                                 <p>
-                                    Trainings that will be hold only with you and your team.
+                                    Trainings that will be held only with you and your team.
                                 </p>
                             </div>
                         </div>
@@ -100,6 +100,7 @@
                         <div class="col-lg-9">
                             <div class="row">
                                 <div class="col-lg-12">
+                                  <h2>Empower <span style="font-style: italic">F</span> ♯</h2>
                                   <p>
                                     Learning a new paradigm makes you a better programmer even if you don't switch to using F# full-time.
                                     The interactive scripting and succint syntax gives you a great tool for quickly solving one-off problems.
@@ -110,54 +111,16 @@
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <a href="/course/2-days-to-fsharp" class="btn btn-sm full-width btn-circle">Learn more</a>
-                            <hr class="space-xs" />
-                        </div>
-                    </div>
-                    <hr />
-                    <hr class="space-sm" />
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                  <p>
-                                    Web application development is a complex process involving the communication of multiple layers.
-                                    Learn how to use WebSharper to its fullest effect to minimize both routine tasks and potential errors.
-                                  </p>
-                                  <hr class="space-xs" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <a href="/course/web-and-mobile" class="btn btn-sm btn-circle full-width">Learn more</a>
-                            <hr class="space-xs" />
-                        </div>
-                    </div>
-                    <hr />
-                    <hr class="space-sm" />
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                  <p>
-                                    Learn to provide better user experience with responsive layout, contextual tooltips, action previews, non-blocking computations.
-                                    Make your application look as great as it behaves with animated state transitions.
-                                  </p>
-                                  <hr class="space-xs" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <a href="/course/functional-reactive" class="btn btn-sm btn-circle full-width">Learn more</a>
+                            <a href="/course/fsharp-basics" class="btn btn-sm full-width btn-circle">Learn more</a>
                             <hr class="space-xs" />
                         </div>
                     </div>
                 </div>
                 <hr class="space-lg" />
-                <h2 class="align-center">Trainings hold</h2>
+                <h2 class="align-center">Trainings held</h2>
                 <p class="align-center width-650">
-                    So far we have hold tens of trainings with hundreds of participants. 
-                    We are looking forward to see you in our future trianigs.
+                    So far we had held tens of trainings with hundreds of participants. 
+                    We are looking forward seeing you in our future trainings.
                 </p>
                 <hr class="space" />
                 <table class="table table-grid table-border align-center table-full-sm no-padding-y">
@@ -178,7 +141,7 @@
                             <td>
                                 <div class="counter counter-vertical counter-icon align-center">
                                     <div>
-                                        <h3>People joined</h3>
+                                        <h3>People participated</h3>
                                         <div class="value">
                                             <span class="text-md" data-to="900" data-speed="3000" data-unit="+">300+</span>
                                             <span></span>
