--- a/src/Hosted/trainings/fsharp-basics.html
+++ b/src/Hosted/trainings/fsharp-basics.html
@@ -67,22 +67,15 @@
               />
             </div>
             <div class="col-lg-6">
-              <h1 style="margin-top: 0">Day 1</h1>
-              <h3>Introduction</h3>
+              <h1 style="margin-top: 0">How F# increases productivity</h1>
+              <p>You can focus on how to write "next generation" applications using F#'s more advanced features.</p>
+              <br/>
+              <p>F#'s advanced concepts enable programming sophistication that would be significantly harder in conventional programming languages.</p>
+              <br/>
               <ul>
-                <li>Basic concepts of F# and functional programming</li>
-                <li>Understanding types and type inference</li>
-              </ul>
-              <h3>Data transformations</h3>
-              <ul>
-                <li>Access structured data with strong typing</li>
-                <li>Interactive exploration and testing with scripts</li>
-                <li>Process data with composable functions</li>
-              </ul>
-              <h3>Advanced topics made easy</h3>
-              <ul>
-                <li>Asynchronous, concurrent and distributed programming</li>
-                <li>Concise error-handling, logging</li>
+                <li>Easier Concurrency, Asynchronous Programming, Parallel Programming</li>
+                <li>Ability to do compilation, interpretation, and transformations via F#'s Quotation facility.</li>
+                <li>Continuations</li>
               </ul>
             </div>
           </div>
@@ -90,23 +83,11 @@
       </section>
       <section class="section-base">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <h1 style="margin-top: 0">Day 2</h1>
-              <h3>Creating complete applications</h3>
-              <ul>
-                <li>Working with user input, reactive UI</li>
-                <li>Build for .NET or the web</li>
-                <li>Designing libraries</li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <img
-                class="margin-23 margin-md-23"
-                src="/assets/003.jpg"
-              />
-            </div>
+          <div class="col-lg-6" style="margin: auto">
+            <h1>What we offer to train</h1>
           </div>
+          <hr class="space-xs" />
+          <div ws-replace="VideoList"></div>
         </div>
       </section>
     </main>
@@ -128,7 +109,7 @@
       <script src="/themekit/scripts/magnific-popup.min.js"></script>
       <script src="/themekit/scripts/imagesloaded.min.js"></script>
       <script src="/themekit/scripts/parallax.min.js"></script>
-      <script src="media/custom.js"></script>
+      <script src="/media/custom.js"></script>
       <script src="/js/Client${ReleaseMin}.js"></script>
     </footer>
     <script ws-replace="scripts"></script>
