--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -199,7 +199,7 @@
                         <i class="fas fa-user-alt text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Availability</h3>
-                          <p>1 people</p>
+                          <p>1 person</p>
                         </div>
                       </div>
                     </td>
@@ -267,7 +267,7 @@
                         <i class="fas fa-user-alt text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Availability</h3>
-                          <p>1 people</p>
+                          <p>1 person</p>
                         </div>
                       </div>
                     </td>
