--- a/src/Hosted/jobs/202102-fsharp-intern.html
+++ b/src/Hosted/jobs/202102-fsharp-intern.html
@@ -90,7 +90,7 @@
                         <i class="fas fa-user-alt text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Availability</h3>
-                          <p>1 people</p>
+                          <p>1 person</p>
                         </div>
                       </div>
                     </td>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-lg-3">
               <a
-                href="mailto:hr@intellifactory.com?subject=F# Intern"
+                href="mailto:hr@intellifactory.com?subject=F#%20Intern"
                 target="_blank"
                 class="btn btn-sm btn-circle full-width"
                 >Send your resume</a
