--- a/src/Hosted/jobs/202102-fsharp-intern.html
+++ b/src/Hosted/jobs/202102-fsharp-intern.html
@@ -117,13 +117,7 @@
               </table>
             </div>
             <div class="col-lg-3">
-              <a
-                href="mailto:hr@intellifactory.com?subject=F#%20Intern"
-                target="_blank"
-                class="btn btn-sm btn-circle full-width"
-                >Send your resume</a
-              >
-              <hr class="space-xs" />
+              <div ws-replace="ApplySteps"></div>
             </div>
           </div>
         </div>
